<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorlightblue"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".VerifyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/veracc"
            android:textAlignment="center"
            android:textColor="@color/colorbackground"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkmail"
            android:textAlignment="center"
            android:textColor="@color/colorbackground"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edttext_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:hint="@string/codehint"
            android:inputType="textEmailAddress"
            android:maxLength="6"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorbackground"
            android:textColorHint="@color/colorbackground" />

        <Button
            android:id="@+id/btn_verifysend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custombutton"
            android:text="@string/send"
            android:textColor="@color/colorbackground" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resend"
                android:textAlignment="center"
                android:textColor="@color/colorbackground" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/resendtwo"
                android:textAlignment="center"
                android:textColor="@color/colorbackground" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>